--- a/scripts/install
+++ b/scripts/install
@@ -10,439 +10,77 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# MANAGE SCRIPT FAILURE
+# SETTINGS
 #=================================================
+ynh_script_progression --message="Storing installation settings..."
 
-ynh_clean_setup () {
-	### Remove this function if there's nothing to clean before calling the remove script.
-	true
-}
-# Exit if an error occurs during the execution of the script
-ynh_abort_if_errors
+# Logging:
+log_file="/var/log/$app/$app.log"
+ynh_app_setting_set --app=$app --key=log_file --value="$log_file"
 
 #=================================================
-# RETRIEVE ARGUMENTS FROM THE MANIFEST
+# SETUP LOG FILE
 #=================================================
+ynh_script_progression --message="Setup logging..."
 
-domain=$YNH_APP_ARG_DOMAIN
-path_url=$YNH_APP_ARG_PATH
-is_public=$YNH_APP_ARG_IS_PUBLIC
-db_type=$YNH_APP_ARG_DB_TYPE
+myynh_setup_log_file
 
-### If it's a multi-instance app, meaning it can be installed several times independently
-### The id of the app as stated in the manifest is available as $YNH_APP_ID
-### The instance number is available as $YNH_APP_INSTANCE_NUMBER (equals "1", "2"...)
-### The app instance name is available as $YNH_APP_INSTANCE_NAME
-###    - the first time the app is installed, YNH_APP_INSTANCE_NAME = ynhexample
-###    - the second time the app is installed, YNH_APP_INSTANCE_NAME = ynhexample__2
-###    - ynhexample__{N} for the subsequent installations, with N=3,4...
-### The app instance name is probably what interests you most, since this is
-### guaranteed to be unique. This is a good unique identifier to define installation path,
-### db names...
-app=$YNH_APP_INSTANCE_NAME
+# Use logrotate to manage application logfile(s)
+ynh_use_logrotate --logfile="$log_file" --specific_user=$app
 
 #=================================================
-# CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
+# PYTHON VIRTUALENV
 #=================================================
-### About --weight and --time
-### ynh_script_progression will show to your final users the progression of each scripts.
-### In order to do that, --weight will represent the relative time of execution compared to the other steps in the script.
-### --time is a packager option, it will show you the execution time since the previous call.
-### This option should be removed before releasing your app.
-### Use the execution time, given by --time, to estimate the weight of a step.
-### A common way to do it is to set a weight equal to the execution time in second +1.
-### The execution time is given for the duration since the previous call. So the weight should be applied to this previous call.
-ynh_script_progression --message="Validating installation parameters..." --time --weight=1
+ynh_script_progression --message="Create and setup Python virtualenv..." --weight=45
 
-### If the app uses NGINX as web server (written in HTML/PHP in most cases), the final path should be "/var/www/$app".
-### If the app provides an internal web server (or uses another application server such as uWSGI), the final path should be "/opt/yunohost/$app"
-final_path=/var/www/$app
-test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
+ynh_add_config --template="requirements.txt" --destination="$install_dir/requirements.txt"
 
-# Register (book) web path
-ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
+myynh_setup_python_venv
 
 #=================================================
-# STORE SETTINGS FROM MANIFEST
-#=================================================
-ynh_script_progression --message="Storing installation settings..." --time --weight=1
+# copy config files
+# ================================================
+ynh_script_progression --message="Create $app configuration files..."
 
-ynh_app_setting_set --app=$app --key=domain --value=$domain
-ynh_app_setting_set --app=$app --key=path --value=$path_url
-ynh_app_setting_set --app=$app --key=db_type --value=$db_type
-ynh_app_setting_set --app=$app --key=final_path --value=$final_path
+ynh_add_config --template="gunicorn.conf.py" --destination="$install_dir/gunicorn.conf.py"
 
-#=================================================
-# STANDARD MODIFICATIONS
-#=================================================
-# FIND AND OPEN A PORT
-#=================================================
-ynh_script_progression --message="Finding an available port..." --time --weight=1
+mkdir -p "$data_dir/flask-app"
+ynh_add_config --template="__init__.py" --destination="$data_dir/flask-app/__init__.py"
+ynh_app_setting_set --app=$app --key=main_folder --value="flask-app"
+ynh_app_setting_set --app=$app --key=requirements_path --value=""
 
-### Use these lines if you have to open a port for the application
-### `ynh_find_port` will find the first available port starting from the given port.
-### If you're not using these lines:
-###		- Remove the section "CLOSE A PORT" in the remove script
-
-# Find an available port
-port=$(ynh_find_port --port=8095)
-ynh_app_setting_set --app=$app --key=port --value=$port
-
-# Optional: Expose this port publicly
-# (N.B.: you only need to do this if the app actually needs to expose the port publicly.
-# If you do this and the app doesn't actually need you are CREATING SECURITY HOLES IN THE SERVER !)
-
-# Open the port
-# ynh_script_progression --message="Configuring firewall..." --time --weight=1
-# ynh_exec_warn_less yunohost firewall allow --no-upnp TCP $port
-
-#=================================================
-# INSTALL DEPENDENCIES
-#=================================================
-ynh_script_progression --message="Installing dependencies..." --time --weight=1
-
-### `ynh_install_app_dependencies` allows you to add any "apt" dependencies to the package.
-### Those deb packages will be installed as dependencies of this package.
-### If you're not using this helper:
-###		- Remove the section "REMOVE DEPENDENCIES" in the remove script
-###		- Remove the variable "pkg_dependencies" in _common.sh
-###		- As well as the section "REINSTALL DEPENDENCIES" in the restore script
-###		- And the section "UPGRADE DEPENDENCIES" in the upgrade script
-
-ynh_install_app_dependencies $pkg_dependencies
-
-if [ $db_type = "mysql" ]
-then
-	ynh_install_app_dependencies python3-mysqldb libmariadbclient-dev
-elif [ $db_type = "postgresql" ]
-then
-	ynh_install_app_dependencies postgresql python3-psycopg2 libpq-dev
-elif [ $db_type = "sqlite" ]
-then
-	ynh_install_app_dependencies sqlite3
-fi
-
-#=================================================
-# CREATE DEDICATED USER
-#=================================================
-ynh_script_progression --message="Configuring system user..." --time --weight=1
-
-# Create a system user
-ynh_system_user_create --username=$app --home_dir="$final_path"
-
-#=================================================
-# CREATE A DATABASE
-#=================================================
-
-if [ $db_type = "mysql" ]
-then
-
-	ynh_script_progression --message="Creating a MySQL database..." --time --weight=1
-
-	### Use these lines if you need a database for the application.
-	### `ynh_mysql_setup_db` will create a database, an associated user and a ramdom password.
-	### The password will be stored as 'mysqlpwd' into the app settings,
-	### and will be available as $db_pwd
-	### If you're not using these lines:
-	###		- Remove the section "BACKUP THE MYSQL DATABASE" in the backup script
-	###		- Remove also the section "REMOVE THE MYSQL DATABASE" in the remove script
-	###		- As well as the section "RESTORE THE MYSQL DATABASE" in the restore script
-
-	db_name=$(ynh_sanitize_dbid --db_name=$app)
-	db_user=$db_name
-	ynh_app_setting_set --app=$app --key=db_name --value=$db_name
-	ynh_mysql_setup_db --db_user=$db_user --db_name=$db_name
-
-elif [ $db_type = "postgresql" ]
-then
-
-	ynh_script_progression --message="Creating a PostgreSQL database..." --time --weight=1
-
-	db_name=$(ynh_sanitize_dbid --db_name=$app)
-	db_user=$db_name
-	ynh_app_setting_set --app=$app --key=db_name --value=$db_name
-	ynh_psql_setup_db --db_user=$db_user --db_name=$db_name
-
-else
-
-	ynh_script_progression --message="Skipping database..." --time --weight=1
-
-fi
-
-#=================================================
-# NGINX CONFIGURATION
-#=================================================
-ynh_script_progression --message="Configuring NGINX web server..." --time --weight=1
-
-### `ynh_add_nginx_config` will use the file conf/nginx.conf
-
-# Create a dedicated NGINX config
-ynh_add_nginx_config
-
-#=================================================
-# SPECIFIC SETUP
-#=================================================
-# CREATE A PYTHON VIRTUALENV
-#=================================================
-
-mkdir -p $final_path
-pushd $final_path
-python3 -m venv --system-site-packages venv
-set +o nounset
-. venv/bin/activate
-set -o nounset
-pip install --upgrade Flask
-if [ "$db_type" != 'none' ]; then pip install --upgrade Flask-SQLAlchemy ; fi
-pip install --upgrade flask-login
-pip install --upgrade gunicorn
-#psycopg2 driver for sqlalchemy postgresql dialect
-if [ "$db_type" = 'postgresql' ]; then pip install --upgrade psycopg2; fi
-set +o nounset
-deactivate
-set -o nounset
-popd
-
-chown $app:www-data -R "$final_path"
-
-#=================================================
-# SPECIFIC SETUP
-#=================================================
-# COPY TEMPLATE FILES
-#=================================================
-
-cp -r ../sources/* $final_path/
-#chmod u=rwX,g=rX,o= -R $final_path
-chown $app:www-data -R $final_path
-
-#=================================================
-# CREATE DATA DIRECTORY
-#=================================================
-ynh_script_progression --message="Creating a data directory..." --time --weight=1
-
-### Use these lines if you need to create a directory to store "persistent files" for the application.
-### Usually this directory is used to store uploaded files or any file that won't be updated during 
-### an upgrade and that won't be deleted during app removal unless "--purge" option is used.
-### If you're not using these lines:
-###		- Remove the section "BACKUP THE DATA DIR" in the backup script
-###		- Remove the section "RESTORE THE DATA DIRECTORY" in the restore script
-###     - As well as the section "REMOVE DATA DIR" in the remove script
-
-datadir=/home/yunohost.app/$app
-ynh_app_setting_set --app=$app --key=datadir --value=$datadir
-
-mkdir -p $datadir
-
-# FIXME: this should be managed by the core in the future
-# Here, as a packager, you may have to tweak the ownerhsip/permissions
-# such that the appropriate users (e.g. maybe www-data) can access
-# files in some cases.
-# But FOR THE LOVE OF GOD, do not allow r/x for "others" on the entire folder -
-# this will be treated as a security issue.
-chmod 750 "$datadir"
-chmod -R o-rwx "$datadir"
-chown -R $app:www-data "$datadir"
-
-#=================================================
-# ADD A CONFIGURATION
-#=================================================
-ynh_script_progression --message="Adding configuration files..." --time --weight=1
-
-### You can add specific configuration files.
-###
-### Typically, put your template conf file in ../conf/your_config_file
-### The template may contain strings such as __FOO__ or __FOO_BAR__,
-### which will automatically be replaced by the values of $foo and $foo_bar
-###
-### ynh_add_config will also keep track of the config file's checksum,
-### which later during upgrade may allow to automatically backup the config file
-### if it's found that the file was manually modified
-###
-### Check the documentation of `ynh_add_config` for more info.
-
-ynh_add_config --template="settings.py" --destination="$final_path/app/settings_local.py"
-ynh_add_config --template="gunicorn.py" --destination="$final_path/gunicorn.py"
-
-# FIXME: this should be handled by the core in the future
-# You may need to use chmod 600 instead of 400,
-# for example if the app is expected to be able to modify its own config
-chmod 400 "$final_path/app/settings_local.py"
-chown $app:$app "$final_path/app/settings_local.py"
-
-### For more complex cases where you want to replace stuff using regexes,
-### you shoud rely on ynh_replace_string (which is basically a wrapper for sed)
-### When doing so, you also need to manually call ynh_store_file_checksum
-
-secret_key=$(python3 -c "import secrets; print(secrets.token_hex(16))")
-ynh_replace_string --match_string="_SECRET_KEY_" --replace_string="$secret_key" --target_file="$final_path/app/settings_local.py"
-
-if [ $db_type = "mysql" ]
-then
-	db_host="$db_user:$db_pwd@localhost"
-	ynh_replace_string --match_string="_DB_HOST_" --replace_string="$db_host" --target_file="$final_path/app/settings_local.py"
-	ynh_store_file_checksum --file="$final_path/app/settings_local.py"
-elif [ $db_type = "postgresql" ]
-then
-	db_host="$db_user:$db_pwd@localhost"
-	ynh_replace_string --match_string="_DB_HOST_" --replace_string="$db_host" --target_file="$final_path/app/settings_local.py"
-	ynh_store_file_checksum --file="$final_path/app/settings_local.py"
-elif [ $db_type = "sqlite" ]
-then
-	ynh_replace_string --match_string="DB_PASS" --replace_string="#DB_PASS" --target_file="$final_path/app/settings_local.py"
-	ynh_store_file_checksum --file="$final_path/app/settings_local.py"
-else
-	db_host=""
-	ynh_replace_string --match_string="SQLALCHEMY_DATABASE_URI" --replace_string="#SQLALCHEMY_DATABASE_URI" --target_file="$final_path/app/settings_local.py"
-	ynh_replace_string --match_string="_DB_NAME_" --replace_string="#_DB_NAME_" --target_file="$final_path/app/settings_local.py"
-	ynh_replace_string --match_string="_DB_USER_" --replace_string="#_DB_USER_" --target_file="$final_path/app/settings_local.py"
-	ynh_replace_string --match_string="DB_PASS" --replace_string="#DB_PASS" --target_file="$final_path/app/settings_local.py"
-	ynh_store_file_checksum --file="$final_path/app/settings_local.py"
-fi
-
-#=================================================
-# SPECIFIC SETUP
-#=================================================
-# CREATE DATABASE
-#=================================================
-
-# pushd $final_path
-# set +o nounset
-# . venv/bin/activate
-# set -o nounset
-# python -c "from app import db, create_app; app = create_app(); app.app_context().push(); db.create_all()"
-# set +o nounset
-# deactivate
-# set -o nounset
-# popd
-
-#=================================================
-# SETUP SYSTEMD
-#=================================================
-ynh_script_progression --message="Configuring a systemd service..." --time --weight=1
-
-### `ynh_systemd_config` is used to configure a systemd script for an app.
-### It can be used for apps that use sysvinit (with adaptation) or systemd.
-### Have a look at the app to be sure this app needs a systemd script.
-### `ynh_systemd_config` will use the file conf/systemd.service
-### If you're not using these lines:
-###		- You can remove those files in conf/.
-###		- Remove the section "BACKUP SYSTEMD" in the backup script
-###		- Remove also the section "STOP AND REMOVE SERVICE" in the remove script
-###		- As well as the section "RESTORE SYSTEMD" in the restore script
-###		- And the section "SETUP SYSTEMD" in the upgrade script
-
-# Create a dedicated systemd config
-ynh_add_systemd_config
+# Add the password to this user
+chpasswd <<< "${app}:${password}"
 
 #=================================================
 # GENERIC FINALIZATION
 #=================================================
-# SETUP LOGROTATE
+# SECURE FILES AND DIRECTORIES
 #=================================================
-ynh_script_progression --message="Configuring log rotation..." --time --weight=1
+ynh_script_progression --message="Set file permissions..."
 
-### `ynh_use_logrotate` is used to configure a logrotate configuration for the logs of this app.
-### Use this helper only if there is effectively a log file for this app.
-### If you're not using this helper:
-###		- Remove the section "BACKUP LOGROTATE" in the backup script
-###		- Remove also the section "REMOVE LOGROTATE CONFIGURATION" in the remove script
-###		- As well as the section "RESTORE THE LOGROTATE CONFIGURATION" in the restore script
-###		- And the section "SETUP LOGROTATE" in the upgrade script
-
-# Use logrotate to manage application logfile(s)
-ynh_use_logrotate
-
-mkdir -p "/var/log/$app/"
-chown -R $app:adm "/var/log/$app/"
+myynh_fix_file_permissions
 
 #=================================================
-# INTEGRATE SERVICE IN YUNOHOST
+# NGINX CONFIGURATION
 #=================================================
-ynh_script_progression --message="Integrating service in YunoHost..." --time --weight=1
+ynh_script_progression --message="Configuring NGINX web server..."
 
-### `yunohost service add` integrates a service in YunoHost. It then gets
-### displayed in the admin interface and through the others `yunohost service` commands.
-### (N.B.: this line only makes sense if the app adds a service to the system!)
-### If you're not using these lines:
-###		- You can remove these files in conf/.
-###		- Remove the section "REMOVE SERVICE INTEGRATION IN YUNOHOST" in the remove script
-###		- As well as the section "INTEGRATE SERVICE IN YUNOHOST" in the restore script
-###		- And the section "INTEGRATE SERVICE IN YUNOHOST" in the upgrade script
+ynh_add_nginx_config
 
-yunohost service add $app --description="Flask Template app" --log="/var/log/$app/$app.log"
+ynh_add_systemd_config
 
-### Additional options starting with 3.8:
-###
-### --needs_exposed_ports "$port" a list of ports that needs to be publicly exposed
-###                               which will then be checked by YunoHost's diagnosis system
-###                               (N.B. DO NOT USE THIS is the port is only internal!!!)
-###
-### --test_status "some command"  a custom command to check the status of the service
-###                               (only relevant if 'systemctl status' doesn't do a good job)
-###
-### --test_conf "some command"    some command similar to "nginx -t" that validates the conf of the service
-###
-### Re-calling 'yunohost service add' during the upgrade script is the right way
-### to proceed if you later realize that you need to enable some flags that
-### weren't enabled on old installs (be careful it'll override the existing
-### service though so you should re-provide all relevant flags when doing so)
+yunohost service add $app --description="Gunicorn running a Flask app" --log="/var/log/$app/$app.log"
 
 #=================================================
-# START SYSTEMD SERVICE
+# Start the app server via systemd
 #=================================================
-ynh_script_progression --message="Starting a systemd service..." --time --weight=1
+ynh_script_progression --message="Starting systemd service '$app'..." --weight=5
 
-### `ynh_systemd_action` is used to start a systemd service for an app.
-### Only needed if you have configure a systemd service
-### If you're not using these lines:
-###		- Remove the section "STOP SYSTEMD SERVICE" and "START SYSTEMD SERVICE" in the backup script
-###		- As well as the section "START SYSTEMD SERVICE" in the restore script
-###		- As well as the section"STOP SYSTEMD SERVICE" and "START SYSTEMD SERVICE" in the upgrade script
-###		- And the section "STOP SYSTEMD SERVICE" and "START SYSTEMD SERVICE" in the change_url script
-
-# Start a systemd service
-ynh_systemd_action --service_name=$app --action="start" --log_path="/var/log/$app/$app.log"
-
-#=================================================
-# SETUP FAIL2BAN
-#=================================================
-ynh_script_progression --message="Configuring Fail2Ban..." --time --weight=1
-
-# Create a dedicated Fail2Ban config
-# ynh_add_fail2ban_config --logpath="/var/log/nginx/${domain}-error.log" --failregex="Regex to match into the log for a failed login"
-
-#=================================================
-# SETUP SSOWAT
-#=================================================
-ynh_script_progression --message="Configuring permissions..." --time --weight=1
-
-# Make app public if necessary
-if [ $is_public -eq 1 ]
-then
-	# Everyone can access the app.
-	# The "main" permission is automatically created before the install script.
-	ynh_permission_update --permission="main" --add="visitors"
-fi
-
-### N.B. : the following extra permissions only make sense if your app
-### does have for example an admin interface or an API.
-
-# Only the admin can access the admin panel of the app (if the app has an admin panel)
-# ynh_permission_create --permission="admin" --url="/admin" --allowed=$admin
-
-# Everyone can access the API part
-# We don't want to display the tile in the SSO so we put --show_tile="false"
-# And we don't want the YunoHost admin to be able to remove visitors group to this permission, so we put --protected="true"
-# ynh_permission_create --permission="api" --url="/api" --allowed="visitors" --show_tile="false" --protected="true"
-
-#=================================================
-# RELOAD NGINX
-#=================================================
-ynh_script_progression --message="Reloading NGINX web server..." --time --weight=1
-
-ynh_systemd_action --service_name=nginx --action=reload
+ynh_systemd_action --service_name=$app --action="start" --log_path="$log_file"
 
 #=================================================
 # END OF SCRIPT
 #=================================================
 
-ynh_script_progression --message="Installation of $app completed" --time --last
+ynh_script_progression --message="Installation of $app completed" --last
