--- a/scripts/install
+++ b/scripts/install
@@ -63,7 +63,7 @@ then
 
 else
 
-	ynh_script_progression --message="Skipping database..." --time --weight=1
+	ynh_script_progression --message="Skipping database..." 
     db_name="None"
 	db_user="None"
 
